EventPlanner redesign